test/message/syntactic-tail-call-in-extends.out
*%(basename)s:8: SyntaxError: Tail call expression is not allowed here
  return class A extends continue f() {};
                         ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
